show variable in frontend
