# src/dorc-web/src/apis/dorc-api/swagger.json
@@ -3568,6 +3568,79 @@
         }
       }
     },
+    "/RefDataEnvironments/Clone": {
+      "post": {
+        "tags": [
+          "RefDataEnvironments"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CloneEnvironmentRequest"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CloneEnvironmentRequest"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/CloneEnvironmentRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/EnvironmentApiModel"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/EnvironmentApiModel"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/RefDataEnvironmentsDetails/{id}": {
       "get": {
         "tags": [
@@ -6361,6 +6434,134 @@
         }
       }
     },
+    "/Request/pause": {
+      "put": {
+        "tags": [
+          "Request"
+        ],
+        "parameters": [
+          {
+            "name": "requestId",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RequestStatusDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RequestStatusDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/Request/resume": {
+      "put": {
+        "tags": [
+          "Request"
+        ],
+        "parameters": [
+          {
+            "name": "requestId",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RequestStatusDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RequestStatusDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/RequestStatuses": {
       "put": {
         "tags": [
@@ -7050,6 +7251,9 @@
           "OAuthUiRequestedScopes": {
             "type": "string",
             "nullable": true
+          },
+          "PauseDeploymentEnabled": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
@@ -7117,6 +7321,35 @@
           "Request": {
             "type": "string",
             "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "CloneEnvironmentRequest": {
+        "type": "object",
+        "properties": {
+          "SourceEnvironmentId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "NewEnvironmentName": {
+            "type": "string",
+            "nullable": true
+          },
+          "CopyPropertyValues": {
+            "type": "boolean"
+          },
+          "CopyServerMappings": {
+            "type": "boolean"
+          },
+          "CopyDatabaseMappings": {
+            "type": "boolean"
+          },
+          "CopyProjectMappings": {
+            "type": "boolean"
+          },
+          "CopyAccessControls": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
@@ -7427,6 +7660,10 @@
           },
           "UserEditable": {
             "type": "boolean"
+          },
+          "EnvironmentOwnerEmail": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -7687,6 +7924,10 @@
             "nullable": true
           },
           "EnvironmentOwnerId": {
+            "type": "string",
+            "nullable": true
+          },
+          "EnvironmentOwnerEmail": {
             "type": "string",
             "nullable": true
           },
